Added frontend test case

--- a/package.json
+++ b/package.json
@@ -2,5 +2,11 @@
   "devDependencies": {
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0"
+  },
+  "jest": {
+    "testEnvironment": "jest-environment-jsdom"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
